fixed info container alignments

--- a/Learning and Classwork/Unit A Computers and Society/Environment and Human Health/DavidF - Environment and Human Health/assets/styles.css
+++ b/Learning and Classwork/Unit A Computers and Society/Environment and Human Health/DavidF - Environment and Human Health/assets/styles.css
@@ -156,18 +156,19 @@ body {
     margin: 60px auto auto auto;
     padding: 40px;
     display: flex;
-    
-    justify-content: center;
-
+    flex-direction: column;
+    align-items: center;
+ 
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+ 
 #info-heading {
     text-align: center;
     font-size: 0.6in;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
 }
 
 #section-heading {
